<resources>
    <string name="app_name">Green Place App</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="codigo">Código</string>
    <string name="descripcion">Descripción</string>
    <string name="fenomeno">Fenómeno</string>
    <string name="aceptar">Aceptar</string>
    <string name="localidad">Localidad</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="altitud">Altitud</string>
    <string name="fecha">Fecha</string>
    <string name="altaObs">Nueva Observación</string>
    <string name="detalleObs">Detalle de Observación</string>
    <string name="descripcionHint">Ingrese la descripción de la observación</string>
    <string name="codigoHint">Ingrese un código</string>
    <string name="longitudHint">Ingrese la longitud</string>
    <string name="latitudHint">Ingrese la latitud</string>
    <string name="altitudHint">Ingrese la altitud</string>
    <string name="fechaObservacion">Ingrese la fecha de la observación</string>
    <string name="departamento">Departamento</string>
    <string name="zona">Zona</string>
    <string name="invalidCodigo">Por favor, ingrese un código</string>
    <string name="invalidDesc">Ingrese una descripción</string>
    <string name="invalidLat">Ingrese la latitud</string>
    <string name="invalidLong">Ingrese la longitud</string>
    <string name="invalidAlt">Ingrese la altitud</string>
    <string name="invalidFenom">Seleccione un fenómeno</string>
    <string name="lblCodigo">Código:</string>
    <string name="lblDescripcion">Descripción:</string>
    <string name="lblFenomeno">Fenómeno:</string>
    <string name="lblDepto">Departamento:</string>
    <string name="lblLocalidad">Localidad:</string>
    <string name="lblZona">Zona:</string>
    <string name="lblLongitud">Longitud:</string>
    <string name="lblLatitud">Latitud:</string>
    <string name="lblAltitud">Altitud</string>
    <string name="lblFecha">Fecha:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="invalidDepto">Seleccione un departamento</string>
    <string name="invalidLocalidad">Seleccione una localidad</string>
    <string name="invalidZona">Seleccione una zona</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Green Place App</string>
    <string name="modifObs">Modificar Observación</string>
    <string name="error_altitud">Valor inválido. El punto máximo de Uruguay es 523.66 metros.</string>
    <string name="error_longitud">La longitud ingresada no pertenece al territorio uruguayo.</string>
    <string name="error_latitud">La latitud ingresada no pertenece al territorio uruguayo.</string>
    <string name="invalidFecha">Ingresa una fecha</string>
    <string name="error_fecha">La fecha de la observación no puede ser futura</string>
    <string name="Longitud">Longitud</string>
    <string name="txtMain">Nuestra aplicación tiene como objetivo colaborar con los ciudadanos y el medio ambiente, permitiendo registrar observaciones en tiempo real. Con tu ayuda podemos hacer del mundo un lugar mas verde.</string>
    <string name="txtBienvenida">Bienvenido a nuestra app</string>
</resources>