<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lytContenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6DADA"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"></ScrollView>

    <TextView
        android:id="@+id/labelActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/altaObs"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelActivity"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/codigoHint"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtdescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCodigo"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/descripcionHint"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/lblFenomeno"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/txtdescripcion"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/fenomeno"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/comboFenomenos"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/txtdescripcion"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp"
        android:layout_toRightOf="@id/lblFenomeno"
        android:entries="@array/comboFenom"
        android:gravity="center_horizontal"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/lblLocalidad"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/comboFenomenos"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/localidad"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/comboLocalidad"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/comboFenomenos"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp"
        android:layout_toRightOf="@id/lblLocalidad"
        android:entries="@array/comboLocalidad"
        android:gravity="center_horizontal"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/txtlongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comboLocalidad"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/longitudHint"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtlatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtlongitud"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/latitudHint"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtaltitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtlatitud"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/altitudHint"
        android:inputType="number" />

    <EditText
        android:id="@+id/fechaCreacion"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:clickable="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp"
        android:inputType="date"
        android:focusable="false"
        android:layout_below="@id/txtaltitud"
        android:hint="@string/fechaObservacion"/>
    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fechaCreacion"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp"
        android:background="@color/colorPrimary"
        android:text="@string/aceptar" />

</RelativeLayout>
